[package]
name = "err"
version = "0.1.1"
edition = "2021"
authors = ["Franklin E. Blanco"]
description = "Just some useful addons for actix web."
license = "MIT"
readme = "README.md"
repository = "https://github.com/franklinblanco/err.git"

[lib]

[dependencies]
serde = { version = "1.0", features = ["derive"] }